# GA_function_approximation

./: .gitignore  CMakeLists.txt  README.md  config.conf  config.ini  execute.sh  graph_builder.py
src/: Config.cpp  Config.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GpuComputation.cpp  GpuComputation.hpp  Individual.cpp  Individual.hpp  Utilities.cpp  Utilities.hpp  crossover.metal  fitness.metal  main.cpp  mutation.metal
